test1 imagen rediccionamiento

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -373,7 +373,7 @@ header .intro-text {
     rgba(99, 114, 255, 0.8) 0%,
     rgba(92, 169, 251, 0.8) 100%
   );
-  padding: 30% 0 0;
+  padding: 20% 0 0; /* MODIFICAR ALTURA PARA DESCRIPCIÓN PORTAFOLIO  */
   height: 100%;
   width: 100%;
   opacity: 0;
